[package]
name = "shadowrocks"
version = "0.1.0"
authors = ["Jing Yang <ditsing@gmail.com>"]
edition = "2018"
description = "Shadowsocks port in pure async/.await Rust."
documentation = ""
readme = "README.md"
homepage = "https://github.com/ditsing/shadowrocks-async"
repository = "https://github.com/ditsing/shadowrocks-async"
license = "MIT"
keywords = ["shadowsocks"]
categories = [""]

[[bin]]
name = "ss-local"
path = "src/bin/local.rs"

[[bin]]
name = "ss-server"
path = "src/bin/server.rs"

[features]
default = ["ring-crypto"]
ring-crypto = ["ring"]
ring-digest-in-hkdf = ["ring"]

[dependencies]
async-trait = "0.1"
log = { version = "~0.4", features = ["max_level_debug", "release_max_level_warn"] }
stderrlog = "~0.4"
clap = "~2.33.0"
ring = { version = "~0.16.7", optional = true }
openssl = "~0.10.24"
rand = "0.7"
sodiumoxide = "0.2"
tokio = { version = "0.2", features = ["dns", "io-util", "macros", "rt-core", "stream", "tcp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1"
base64 = "0.12"
percent-encoding = "2.1"

[dev-dependencies]
ring = "~0.16.7"
